--- a/views/register.html
+++ b/views/register.html
@@ -1,45 +1,54 @@
 <div data-ng-controller="RegisterCtrl" class="container">
   <div class="row">
-      <h3 style="text-align: center;">
-        Oppmøte for {{getDayName(date)}} {{date.toLocaleDateString("nb-NO")}}
-      </h3>
-    <div class="row">
-      <p>
-        <select class="form-control" ng-change="getGroup()" ng-model="groupSelected" ng-options="group.name for group in groups"></select>
-      </p>
-      <p>
-        <input type="text" class="form-control" placeholder="Søk" data-ng-model="elementName"/> 
-      </p>
+    <div class="col-xs-2">
+      <button type="button" class="btn btn-default btn-lg">
+        <span class="glyphicon glyphicon glyphicon-chevron-left"></span>
+      </button>
+    </div>
+    <div class="col-xs-8">
+      <h3 style="text-align: center;">{{getDayName(date)}} {{date.toLocaleDateString("nb-NO")}}</h3>
+    </div>
+    <div class="col-xs-2">
+      <button type="button" class="btn btn-default btn-lg">
+        <span class="glyphicon glyphicon glyphicon-chevron-right"></span>
+      </button>
+    </div>
+  </div>
+  <div class="row">
+    <p>
+      <select class="form-control" ng-change="getGroup()" ng-model="groupSelected" ng-options="group.name for group in groups"></select>
+    </p>
+    <p>
+      <input type="text" class="form-control" placeholder="Søk" data-ng-model="elementName"/> 
+    </p>
+  </div>
+
+  <div class="row">    
+    <div class="col-xs-6">
+      <ul class="list-group">
+        <a href="#" class="list-group-item active">
+          <h4 class="list-group-item-heading">Oppmøte</h4>
+          <p class="list-group-item-text">Hvem har møtt i dag?</p>
+        </a>
+        <li data-ng-repeat="att in attendance | myPersons:groupSelected |  filter: {name: elementName}"  class="list-group-item ng-hide" ng-hide="att.attended">
+          <input type="checkbox" value="{{att.name}}" data-ng-model="att.attended"> {{att.name}}
+        </li>
+      </ul>
+      <button data-ng-click="sendAttendance()" class="btn btn-primary btn-lg btn-block">Ferdig</button>
     </div>
     
-    <div class="row">
-      
-      <div class="col-xs-6">
-        <ul class="list-group">
-          <a href="#" class="list-group-item active">
-            <h4 class="list-group-item-heading">Oppmøte</h4>
-            <p class="list-group-item-text">Hvem har møtt i dag?</p>
-          </a>
-          <li data-ng-repeat="att in attendance | myPersons:groupSelected |  filter: {name: elementName}"  class="list-group-item ng-hide" ng-hide="att.attended">
-            <input type="checkbox" value="{{att.name}}" data-ng-model="att.attended"> {{att.name}}
-          </li>
-        </ul>
-        <button data-ng-click="sendAttendance()" class="btn btn-primary btn-lg btn-block">Ferdig</button>
-      </div>
-      
-      <div class="col-xs-6">
-        <ul class="list-group">
-          <a href="#" class="list-group-item active">
-            <h4 class="list-group-item-heading">Møtt</h4>
-            <p class="list-group-item-text">Disse var på dagens trening:</p>
-          </a>
-          <li data-ng-repeat="person in attendance" class="list-group-item ng-show" ng-show="person.attended">
-            <input type="checkbox" value="{{person.name}}" data-ng-model="person.attended"> {{person.name}}
-          </li>
-        </ul>
-      </div>
-
+    <div class="col-xs-6">
+      <ul class="list-group">
+        <a href="#" class="list-group-item active">
+          <h4 class="list-group-item-heading">Møtt</h4>
+          <p class="list-group-item-text">Disse var på dagens trening:</p>
+        </a>
+        <li data-ng-repeat="person in attendance" class="list-group-item ng-show" ng-show="person.attended">
+          <input type="checkbox" value="{{person.name}}" data-ng-model="person.attended"> {{person.name}}
+        </li>
+      </ul>
     </div>
 
   </div>
+
 </div>
